# autoTest_cmdApp

./: .gitignore  app.py  blog.py  pyproject.toml
tests/integration/: test_blog.py
tests/system/: test_app.py
tests/unit/: test_blog.py  test_post.py
